ejercicios-BISON/solucion/trabajo/parser/interpreter.output
Terminals unused in grammar

    BOOL
    UNDEFINED


Grammar

    0 $accept: program $end

    1 program: stmtlist

    2 stmtlist: ε
    3         | stmtlist stmt
    4         | stmtlist error

    5 stmt: COMMENT
    6     | SEMICOLON
    7     | asgn SEMICOLON
    8     | preincstmt SEMICOLON
    9     | postincstmt SEMICOLON
   10     | predecstmt SEMICOLON
   11     | postdecstmt SEMICOLON
   12     | print SEMICOLON
   13     | read SEMICOLON
   14     | readstring SEMICOLON
   15     | if
   16     | dowhile SEMICOLON
   17     | while
   18     | repeat
   19     | for
   20     | cases
   21     | block
   22     | clear
   23     | place
   24     | errorstmt

   25 preincstmt: INCREMENT VARIABLE

   26 postincstmt: VARIABLE INCREMENT

   27 predecstmt: DECREMENT VARIABLE

   28 postdecstmt: VARIABLE DECREMENT

   29 block: LETFCURLYBRACKET stmtlist RIGHTCURLYBRACKET

   30 controlSymbol: ε

   31 errorstmt: errorif
   32          | errorifelse

   33 errorif: IF THEN stmtlist END_IF
   34        | THEN stmtlist END_IF

   35 errorifelse: IF THEN stmtlist ELSE stmtlist END_IF

   36 if: IF controlSymbol cond THEN stmtlist END_IF
   37   | IF controlSymbol cond THEN stmtlist ELSE stmtlist END_IF

   38 dowhile: DO controlSymbol stmtlist WHILE controlSymbol cond

   39 while: WHILE controlSymbol cond DO stmtlist END_WHILE

   40 repeat: REPEAT controlSymbol stmtlist UNTIL cond

   41 for: FOR controlSymbol VARIABLE FROM exp UNTIL exp DO stmtlist END_FOR
   42    | FOR controlSymbol VARIABLE FROM exp UNTIL exp STEP exp DO stmtlist END_FOR

   43 cases: CASES LPAREN exp RPAREN value_list default END_CASES

   44 value_list: VALUE exp COLON stmtlist
   45           | value_list VALUE exp COLON stmtlist

   46 default: DEFAULT COLON stmtlist
   47        | ε

   48 clear: CLEAR SEMICOLON

   49 place: PLACE LPAREN exp COMMA exp RPAREN SEMICOLON

   50 cond: LPAREN exp RPAREN

   51 asgn: VARIABLE ASSIGNMENT exp
   52     | VARIABLE PLUS_ASSIGNMENT exp
   53     | VARIABLE PLUS_ASSIGNMENT asgn
   54     | VARIABLE MINUS_ASSIGNMENT exp
   55     | VARIABLE MINUS_ASSIGNMENT asgn
   56     | VARIABLE MULTIPLICATION_ASSIGNMENT exp
   57     | VARIABLE MULTIPLICATION_ASSIGNMENT asgn
   58     | VARIABLE DIVISION_ASSIGNMENT exp
   59     | VARIABLE DIVISION_ASSIGNMENT asgn
   60     | VARIABLE INT_DIVISION_ASSIGNMENT exp
   61     | VARIABLE INT_DIVISION_ASSIGNMENT asgn
   62     | VARIABLE MODULO_ASSIGNMENT exp
   63     | VARIABLE MODULO_ASSIGNMENT asgn
   64     | VARIABLE POWER_ASSIGNMENT exp
   65     | VARIABLE POWER_ASSIGNMENT asgn
   66     | VARIABLE ASSIGNMENT asgn
   67     | CONSTANT ASSIGNMENT exp
   68     | CONSTANT ASSIGNMENT asgn
   69     | VARIABLE ASSIGNMENT alternative

   70 print: PRINT exp

   71 read: READ LPAREN VARIABLE RPAREN
   72     | READ LPAREN CONSTANT RPAREN

   73 readstring: READ_STRING LPAREN VARIABLE RPAREN
   74           | READ_STRING LPAREN CONSTANT RPAREN

   75 alternative: cond ALT exp COLON exp

   76 exp: NUMBER
   77    | STRING
   78    | exp CONCAT exp
   79    | exp PLUS exp
   80    | exp MINUS exp
   81    | exp MULTIPLICATION exp
   82    | exp DIVISION exp
   83    | exp INT_DIVISION exp
   84    | LPAREN exp RPAREN
   85    | PLUS exp
   86    | MINUS exp
   87    | preinc
   88    | postinc
   89    | predec
   90    | postdec
   91    | exp MODULO exp
   92    | exp POWER exp
   93    | VARIABLE
   94    | CONSTANT
   95    | BUILTIN LPAREN listOfExp RPAREN
   96    | exp GREATER_THAN exp
   97    | exp GREATER_OR_EQUAL exp
   98    | exp LESS_THAN exp
   99    | exp LESS_OR_EQUAL exp
  100    | exp EQUAL exp
  101    | exp NOT_EQUAL exp
  102    | exp AND exp
  103    | exp OR exp
  104    | NOT exp

  105 preinc: INCREMENT VARIABLE

  106 postinc: VARIABLE INCREMENT

  107 predec: DECREMENT VARIABLE

  108 postdec: VARIABLE DECREMENT

  109 listOfExp: ε
  110          | exp restOfListOfExp

  111 restOfListOfExp: ε
  112                | COMMA exp restOfListOfExp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 4
    SEMICOLON (258) 6 7 8 9 10 11 12 13 14 16 48 49
    COLON (259) 44 45 46 75
    ALT (260) 75
    COMMENT <comentario> (261) 5
    PRINT (262) 70
    READ (263) 71 72
    READ_STRING (264) 73 74
    IF (265) 33 35 36 37
    ELSE (266) 35 37
    WHILE (267) 38 39
    THEN (268) 33 34 35 36 37
    END_IF (269) 33 34 35 36 37
    END_WHILE (270) 39
    REPEAT (271) 40
    FOR (272) 41 42
    FROM (273) 41 42
    UNTIL (274) 40 41 42
    END_FOR (275) 41 42
    STEP (276) 42
    CASES (277) 43
    VALUE (278) 44 45
    DEFAULT (279) 46
    END_CASES (280) 43
    DO (281) 38 39 41 42
    CLEAR (282) 48
    PLACE (283) 49
    LETFCURLYBRACKET (284) 29
    RIGHTCURLYBRACKET (285) 29
    ASSIGNMENT (286) 51 66 67 68 69
    PLUS_ASSIGNMENT (287) 52 53
    MINUS_ASSIGNMENT (288) 54 55
    MULTIPLICATION_ASSIGNMENT (289) 56 57
    DIVISION_ASSIGNMENT (290) 58 59
    INT_DIVISION_ASSIGNMENT (291) 60 61
    MODULO_ASSIGNMENT (292) 62 63
    POWER_ASSIGNMENT (293) 64 65
    COMMA (294) 49 112
    STRING <cadena> (295) 77
    NUMBER <number> (296) 76
    BOOL <logic> (297)
    VARIABLE <string> (298) 25 26 27 28 41 42 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 69 71 73 93 105 106 107 108
    UNDEFINED <string> (299)
    CONSTANT <string> (300) 67 68 72 74 94
    BUILTIN <string> (301) 95
    OR (302) 103
    AND (303) 102
    GREATER_OR_EQUAL (304) 97
    LESS_OR_EQUAL (305) 99
    GREATER_THAN (306) 96
    LESS_THAN (307) 98
    EQUAL (308) 100
    NOT_EQUAL (309) 101
    NOT (310) 104
    CONCAT (311) 78
    PLUS (312) 79 85
    MINUS (313) 80 86
    MULTIPLICATION (314) 81
    DIVISION (315) 82
    MODULO (316) 91
    INT_DIVISION (317) 83
    LPAREN (318) 43 49 50 71 72 73 74 84 95
    RPAREN (319) 43 49 50 71 72 73 74 84 95
    UNARY (320)
    INCREMENT (321) 25 26 105 106
    DECREMENT (322) 27 28 107 108
    POWER (323) 92


Nonterminals, with rules where they appear

    $accept (69)
        on left: 0
    program <prog> (70)
        on left: 1
        on right: 0
    stmtlist <stmts> (71)
        on left: 2 3 4
        on right: 1 3 4 29 33 34 35 36 37 38 39 40 41 42 44 45 46
    stmt <st> (72)
        on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
        on right: 3
    preincstmt <st> (73)
        on left: 25
        on right: 8
    postincstmt <st> (74)
        on left: 26
        on right: 9
    predecstmt <st> (75)
        on left: 27
        on right: 10
    postdecstmt <st> (76)
        on left: 28
        on right: 11
    block <st> (77)
        on left: 29
        on right: 21
    controlSymbol (78)
        on left: 30
        on right: 36 37 38 39 40 41 42
    errorstmt <st> (79)
        on left: 31 32
        on right: 24
    errorif <st> (80)
        on left: 33 34
        on right: 31
    errorifelse <st> (81)
        on left: 35
        on right: 32
    if <st> (82)
        on left: 36 37
        on right: 15
    dowhile <st> (83)
        on left: 38
        on right: 16
    while <st> (84)
        on left: 39
        on right: 17
    repeat <st> (85)
        on left: 40
        on right: 18
    for <st> (86)
        on left: 41 42
        on right: 19
    cases <st> (87)
        on left: 43
        on right: 20
    value_list <valuestmts> (88)
        on left: 44 45
        on right: 43 45
    default <st> (89)
        on left: 46 47
        on right: 43
    clear <st> (90)
        on left: 48
        on right: 22
    place <st> (91)
        on left: 49
        on right: 23
    cond <expNode> (92)
        on left: 50
        on right: 36 37 38 39 40 75
    asgn <st> (93)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
        on right: 7 53 55 57 59 61 63 65 66 68
    print <st> (94)
        on left: 70
        on right: 12
    read <st> (95)
        on left: 71 72
        on right: 13
    readstring <st> (96)
        on left: 73 74
        on right: 14
    alternative <expNode> (97)
        on left: 75
        on right: 69
    exp <expNode> (98)
        on left: 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
        on right: 41 42 43 44 45 49 50 51 52 54 56 58 60 62 64 67 70 75 78 79 80 81 82 83 84 85 86 91 92 96 97 98 99 100 101 102 103 104 110 112
    preinc <expNode> (99)
        on left: 105
        on right: 87
    postinc <expNode> (100)
        on left: 106
        on right: 88
    predec <expNode> (101)
        on left: 107
        on right: 89
    postdec <expNode> (102)
        on left: 108
        on right: 90
    listOfExp <parameters> (103)
        on left: 109 110
        on right: 95
    restOfListOfExp <parameters> (104)
        on left: 111 112
        on right: 110 112


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (stmtlist)

    program   go to state 1
    stmtlist  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: stmtlist •
    3 stmtlist: stmtlist • stmt
    4         | stmtlist • error

    error             shift, and go to state 4
    SEMICOLON         shift, and go to state 5
    COMMENT           shift, and go to state 6
    PRINT             shift, and go to state 7
    READ              shift, and go to state 8
    READ_STRING       shift, and go to state 9
    IF                shift, and go to state 10
    WHILE             shift, and go to state 11
    THEN              shift, and go to state 12
    REPEAT            shift, and go to state 13
    FOR               shift, and go to state 14
    CASES             shift, and go to state 15
    DO                shift, and go to state 16
    CLEAR             shift, and go to state 17
    PLACE             shift, and go to state 18
    LETFCURLYBRACKET  shift, and go to state 19
    VARIABLE          shift, and go to state 20
    CONSTANT          shift, and go to state 21
    INCREMENT         shift, and go to state 22
    DECREMENT         shift, and go to state 23

    $end  reduce using rule 1 (program)

    stmt         go to state 24
    preincstmt   go to state 25
    postincstmt  go to state 26
    predecstmt   go to state 27
    postdecstmt  go to state 28
    block        go to state 29
    errorstmt    go to state 30
    errorif      go to state 31
    errorifelse  go to state 32
    if           go to state 33
    dowhile      go to state 34
    while        go to state 35
    repeat       go to state 36
    for          go to state 37
    cases        go to state 38
    clear        go to state 39
    place        go to state 40
    asgn         go to state 41
    print        go to state 42
    read         go to state 43
    readstring   go to state 44


State 3

    0 $accept: program $end •

    $default  accept


State 4

    4 stmtlist: stmtlist error •

    $default  reduce using rule 4 (stmtlist)


State 5

    6 stmt: SEMICOLON •

    $default  reduce using rule 6 (stmt)


State 6

    5 stmt: COMMENT •

    $default  reduce using rule 5 (stmt)


State 7

   70 print: PRINT • exp

    STRING     shift, and go to state 45
    NUMBER     shift, and go to state 46
    VARIABLE   shift, and go to state 47
    CONSTANT   shift, and go to state 48
    BUILTIN    shift, and go to state 49
    NOT        shift, and go to state 50
    PLUS       shift, and go to state 51
    MINUS      shift, and go to state 52
    LPAREN     shift, and go to state 53
    INCREMENT  shift, and go to state 54
    DECREMENT  shift, and go to state 55

    exp      go to state 56
    preinc   go to state 57
    postinc  go to state 58
    predec   go to state 59
    postdec  go to state 60


State 8

   71 read: READ • LPAREN VARIABLE RPAREN
   72     | READ • LPAREN CONSTANT RPAREN

    LPAREN  shift, and go to state 61


State 9

   73 readstring: READ_STRING • LPAREN VARIABLE RPAREN
   74           | READ_STRING • LPAREN CONSTANT RPAREN

    LPAREN  shift, and go to state 62


State 10

   33 errorif: IF • THEN stmtlist END_IF
   35 errorifelse: IF • THEN stmtlist ELSE stmtlist END_IF
   36 if: IF • controlSymbol cond THEN stmtlist END_IF
   37   | IF • controlSymbol cond THEN stmtlist ELSE stmtlist END_IF

    THEN  shift, and go to state 63

    $default  reduce using rule 30 (controlSymbol)

    controlSymbol  go to state 64


State 11

   39 while: WHILE • controlSymbol cond DO stmtlist END_WHILE

    $default  reduce using rule 30 (controlSymbol)

    controlSymbol  go to state 65


State 12

   34 errorif: THEN • stmtlist END_IF

    $default  reduce using rule 2 (stmtlist)

    stmtlist  go to state 66


State 13

   40 repeat: REPEAT • controlSymbol stmtlist UNTIL cond

    $default  reduce using rule 30 (controlSymbol)

    controlSymbol  go to state 67


State 14

   41 for: FOR • controlSymbol VARIABLE FROM exp UNTIL exp DO stmtlist END_FOR
   42    | FOR • controlSymbol VARIABLE FROM exp UNTIL exp STEP exp DO stmtlist END_FOR

    $default  reduce using rule 30 (controlSymbol)

    controlSymbol  go to state 68


State 15

   43 cases: CASES • LPAREN exp RPAREN value_list default END_CASES

    LPAREN  shift, and go to state 69


State 16

   38 dowhile: DO • controlSymbol stmtlist WHILE controlSymbol cond

    $default  reduce using rule 30 (controlSymbol)

    controlSymbol  go to state 70


State 17

   48 clear: CLEAR • SEMICOLON

    SEMICOLON  shift, and go to state 71


State 18

   49 place: PLACE • LPAREN exp COMMA exp RPAREN SEMICOLON

    LPAREN  shift, and go to state 72


State 19

   29 block: LETFCURLYBRACKET • stmtlist RIGHTCURLYBRACKET

    $default  reduce using rule 2 (stmtlist)

    stmtlist  go to state 73


State 20

   26 postincstmt: VARIABLE • INCREMENT
   28 postdecstmt: VARIABLE • DECREMENT
   51 asgn: VARIABLE • ASSIGNMENT exp
   52     | VARIABLE • PLUS_ASSIGNMENT exp
   53     | VARIABLE • PLUS_ASSIGNMENT asgn
   54     | VARIABLE • MINUS_ASSIGNMENT exp
   55     | VARIABLE • MINUS_ASSIGNMENT asgn
   56     | VARIABLE • MULTIPLICATION_ASSIGNMENT exp
   57     | VARIABLE • MULTIPLICATION_ASSIGNMENT asgn
   58     | VARIABLE • DIVISION_ASSIGNMENT exp
   59     | VARIABLE • DIVISION_ASSIGNMENT asgn
   60     | VARIABLE • INT_DIVISION_ASSIGNMENT exp
   61     | VARIABLE • INT_DIVISION_ASSIGNMENT asgn
   62     | VARIABLE • MODULO_ASSIGNMENT exp
   63     | VARIABLE • MODULO_ASSIGNMENT asgn
   64     | VARIABLE • POWER_ASSIGNMENT exp
   65     | VARIABLE • POWER_ASSIGNMENT asgn
   66     | VARIABLE • ASSIGNMENT asgn
   69     | VARIABLE • ASSIGNMENT alternative

    ASSIGNMENT                 shift, and go to state 74
    PLUS_ASSIGNMENT            shift, and go to state 75
    MINUS_ASSIGNMENT           shift, and go to state 76
    MULTIPLICATION_ASSIGNMENT  shift, and go to state 77
    DIVISION_ASSIGNMENT        shift, and go to state 78
    INT_DIVISION_ASSIGNMENT    shift, and go to state 79
    MODULO_ASSIGNMENT          shift, and go to state 80
    POWER_ASSIGNMENT           shift, and go to state 81
    INCREMENT                  shift, and go to state 82
    DECREMENT                  shift, and go to state 83


State 21

   67 asgn: CONSTANT • ASSIGNMENT exp
   68     | CONSTANT • ASSIGNMENT asgn

    ASSIGNMENT  shift, and go to state 84


State 22

   25 preincstmt: INCREMENT • VARIABLE

    VARIABLE  shift, and go to state 85


State 23

   27 predecstmt: DECREMENT • VARIABLE

    VARIABLE  shift, and go to state 86


State 24

    3 stmtlist: stmtlist stmt •

    $default  reduce using rule 3 (stmtlist)


State 25

    8 stmt: preincstmt • SEMICOLON

    SEMICOLON  shift, and go to state 87


State 26

    9 stmt: postincstmt • SEMICOLON

    SEMICOLON  shift, and go to state 88


State 27

   10 stmt: predecstmt • SEMICOLON

    SEMICOLON  shift, and go to state 89


State 28

   11 stmt: postdecstmt • SEMICOLON

    SEMICOLON  shift, and go to state 90


State 29

   21 stmt: block •

    $default  reduce using rule 21 (stmt)


State 30

   24 stmt: errorstmt •

    $default  reduce using rule 24 (stmt)


State 31

   31 errorstmt: errorif •

    $default  reduce using rule 31 (errorstmt)


State 32

   32 errorstmt: errorifelse •

    $default  reduce using rule 32 (errorstmt)


State 33

   15 stmt: if •

    $default  reduce using rule 15 (stmt)


State 34

   16 stmt: dowhile • SEMICOLON

    SEMICOLON  shift, and go to state 91


State 35

   17 stmt: while •

    $default  reduce using rule 17 (stmt)


State 36

   18 stmt: repeat •

    $default  reduce using rule 18 (stmt)


State 37

   19 stmt: for •

    $default  reduce using rule 19 (stmt)


State 38

   20 stmt: cases •

    $default  reduce using rule 20 (stmt)


State 39

   22 stmt: clear •

    $default  reduce using rule 22 (stmt)


State 40

   23 stmt: place •

    $default  reduce using rule 23 (stmt)


State 41

    7 stmt: asgn • SEMICOLON

    SEMICOLON  shift, and go to state 92


State 42

   12 stmt: print • SEMICOLON

    SEMICOLON  shift, and go to state 93


State 43

   13 stmt: read • SEMICOLON

    SEMICOLON  shift, and go to state 94


State 44

   14 stmt: readstring • SEMICOLON

    SEMICOLON  shift, and go to state 95


State 45

   77 exp: STRING •

    $default  reduce using rule 77 (exp)


State 46

   76 exp: NUMBER •

    $default  reduce using rule 76 (exp)


State 47

   93 exp: VARIABLE •
  106 postinc: VARIABLE • INCREMENT
  108 postdec: VARIABLE • DECREMENT

    INCREMENT  shift, and go to state 96
    DECREMENT  shift, and go to state 97

    $default  reduce using rule 93 (exp)


State 48

   94 exp: CONSTANT •

    $default  reduce using rule 94 (exp)


State 49

   95 exp: BUILTIN • LPAREN listOfExp RPAREN

    LPAREN  shift, and go to state 98


State 50

  104 exp: NOT • exp

    STRING     shift, and go to state 45
    NUMBER     shift, and go to state 46
    VARIABLE   shift, and go to state 47
    CONSTANT   shift, and go to state 48
    BUILTIN    shift, and go to state 49
    NOT        shift, and go to state 50
    PLUS       shift, and go to state 51
    MINUS      shift, and go to state 52
    LPAREN     shift, and go to state 53
    INCREMENT  shift, and go to state 54
    DECREMENT  shift, and go to state 55

    exp      go to state 99
    preinc   go to state 57
    postinc  go to state 58
    predec   go to state 59
    postdec  go to state 60


State 51

   85 exp: PLUS • exp

    STRING     shift, and go to state 45
    NUMBER     shift, and go to state 46
    VARIABLE   shift, and go to state 47
    CONSTANT   shift, and go to state 48
    BUILTIN    shift, and go to state 49
    NOT        shift, and go to state 50
    PLUS       shift, and go to state 51
    MINUS      shift, and go to state 52
    LPAREN     shift, and go to state 53
    INCREMENT  shift, and go to state 54
    DECREMENT  shift, and go to state 55

    exp      go to state 100
    preinc   go to state 57
    postinc  go to state 58
    predec   go to state 59
    postdec  go to state 60


State 52

   86 exp: MINUS • exp

    STRING     shift, and go to state 45
    NUMBER     shift, and go to state 46
    VARIABLE   shift, and go to state 47
    CONSTANT   shift, and go to state 48
    BUILTIN    shift, and go to state 49
    NOT        shift, and go to state 50
    PLUS       shift, and go to state 51
    MINUS      shift, and go to state 52
    LPAREN     shift, and go to state 53
    INCREMENT  shift, and go to state 54
    DECREMENT  shift, and go to state 55

    exp      go to state 101
    preinc   go to state 57
    postinc  go to state 58
    predec   go to state 59
    postdec  go to state 60


State 53

   84 exp: LPAREN • exp RPAREN

    STRING     shift, and go to state 45
    NUMBER     shift, and go to state 46
    VARIABLE   shift, and go to state 47
    CONSTANT   shift, and go to state 48
    BUILTIN    shift, and go to state 49
    NOT        shift, and go to state 50
    PLUS       shift, and go to state 51
    MINUS      shift, and go to state 52
    LPAREN     shift, and go to state 53
    INCREMENT  shift, and go to state 54
    DECREMENT  shift, and go to state 55

    exp      go to state 102
    preinc   go to state 57
    postinc  go to state 58
    predec   go to state 59
    postdec  go to state 60


State 54

  105 preinc: INCREMENT • VARIABLE

    VARIABLE  shift, and go to state 103


State 55

  107 predec: DECREMENT • VARIABLE

    VARIABLE  shift, and go to state 104


State 56

   70 print: PRINT exp •
   78 exp: exp • CONCAT exp
   79    | exp • PLUS exp
   80    | exp • MINUS exp
   81    | exp • MULTIPLICATION exp
   82    | exp • DIVISION exp
   83    | exp • INT_DIVISION exp
   91    | exp • MODULO exp
   92    | exp • POWER exp
   96    | exp • GREATER_THAN exp
   97    | exp • GREATER_OR_EQUAL exp
   98    | exp • LESS_THAN exp
   99    | exp • LESS_OR_EQUAL exp
  100    | exp • EQUAL exp
  101    | exp • NOT_EQUAL exp
  102    | exp • AND exp
  103    | exp • OR exp

    OR                shift, and go to state 105
    AND               shift, and go to state 106
    GREATER_OR_EQUAL  shift, and go to state 107
    LESS_OR_EQUAL     shift, and go to state 108
    GREATER_THAN      shift, and go to state 109
    LESS_THAN         shift, and go to state 110
    EQUAL             shift, and go to state 111
    NOT_EQUAL         shift, and go to state 112
    CONCAT            shift, and go to state 113
    PLUS              shift, and go to state 114
    MINUS             shift, and go to state 115
    MULTIPLICATION    shift, and go to state 116
    DIVISION          shift, and go to state 117
    MODULO            shift, and go to state 118
    INT_DIVISION      shift, and go to state 119
    POWER             shift, and go to state 120

    $default  reduce using rule 70 (print)


State 57

   87 exp: preinc •

    $default  reduce using rule 87 (exp)


State 58

   88 exp: postinc •

    $default  reduce using rule 88 (exp)


State 59

   89 exp: predec •

    $default  reduce using rule 89 (exp)


State 60

   90 exp: postdec •

    $default  reduce using rule 90 (exp)


State 61

   71 read: READ LPAREN • VARIABLE RPAREN
   72     | READ LPAREN • CONSTANT RPAREN

    VARIABLE  shift, and go to state 121
    CONSTANT  shift, and go to state 122


State 62

   73 readstring: READ_STRING LPAREN • VARIABLE RPAREN
   74           | READ_STRING LPAREN • CONSTANT RPAREN

    VARIABLE  shift, and go to state 123
    CONSTANT  shift, and go to state 124


State 63

   33 errorif: IF THEN • stmtlist END_IF
   35 errorifelse: IF THEN • stmtlist ELSE stmtlist END_IF

    $default  reduce using rule 2 (stmtlist)

    stmtlist  go to state 125


State 64

   36 if: IF controlSymbol • cond THEN stmtlist END_IF
   37   | IF controlSymbol • cond THEN stmtlist ELSE stmtlist END_IF

    LPAREN  shift, and go to state 126

    cond  go to state 127


State 65

   39 while: WHILE controlSymbol • cond DO stmtlist END_WHILE

    LPAREN  shift, and go to state 126

    cond  go to state 128


State 66

    3 stmtlist: stmtlist • stmt
    4         | stmtlist • error
   34 errorif: THEN stmtlist • END_IF

    error             shift, and go to state 4
    SEMICOLON         shift, and go to state 5
    COMMENT           shift, and go to state 6
    PRINT             shift, and go to state 7
    READ              shift, and go to state 8
    READ_STRING       shift, and go to state 9
    IF                shift, and go to state 10
    WHILE             shift, and go to state 11
    THEN              shift, and go to state 12
    END_IF            shift, and go to state 129
    REPEAT            shift, and go to state 13
    FOR               shift, and go to state 14
    CASES             shift, and go to state 15
    DO                shift, and go to state 16
    CLEAR             shift, and go to state 17
    PLACE             shift, and go to state 18
    LETFCURLYBRACKET  shift, and go to state 19
    VARIABLE          shift, and go to state 20
    CONSTANT          shift, and go to state 21
    INCREMENT         shift, and go to state 22
    DECREMENT         shift, and go to state 23

    stmt         go to state 24
    preincstmt   go to state 25
    postincstmt  go to state 26
    predecstmt   go to state 27
    postdecstmt  go to state 28
    block        go to state 29
    errorstmt    go to state 30
    errorif      go to state 31
    errorifelse  go to state 32
    if           go to state 33
    dowhile      go to state 34
    while        go to state 35
    repeat       go to state 36
    for          go to state 37
    cases        go to state 38
    clear        go to state 39
    place        go to state 40
    asgn         go to state 41
    print        go to state 42
    read         go to state 43
    readstring   go to state 44


State 67

   40 repeat: REPEAT controlSymbol • stmtlist UNTIL cond

    $default  reduce using rule 2 (stmtlist)

    stmtlist  go to state 130


State 68

   41 for: FOR controlSymbol • VARIABLE FROM exp UNTIL exp DO stmtlist END_FOR
   42    | FOR controlSymbol • VARIABLE FROM exp UNTIL exp STEP exp DO stmtlist END_FOR

    VARIABLE  shift, and go to state 131


State 69

   43 cases: CASES LPAREN • exp RPAREN value_list default END_CASES

    STRING     shift, and go to state 45
    NUMBER     shift, and go to state 46
    VARIABLE   shift, and go to state 47
    CONSTANT   shift, and go to state 48
    BUILTIN    shift, and go to state 49
    NOT        shift, and go to state 50
    PLUS       shift, and go to state 51
    MINUS      shift, and go to state 52
    LPAREN     shift, and go to state 53
    INCREMENT  shift, and go to state 54
    DECREMENT  shift, and go to state 55

    exp      go to state 132
    preinc   go to state 57
    postinc  go to state 58
    predec   go to state 59
    postdec  go to state 60


State 70

   38 dowhile: DO controlSymbol • stmtlist WHILE controlSymbol cond

    $default  reduce using rule 2 (stmtlist)

    stmtlist  go to state 133


State 71

   48 clear: CLEAR SEMICOLON •

    $default  reduce using rule 48 (clear)


State 72

   49 place: PLACE LPAREN • exp COMMA exp RPAREN SEMICOLON

    STRING     shift, and go to state 45
    NUMBER     shift, and go to state 46
    VARIABLE   shift, and go to state 47
    CONSTANT   shift, and go to state 48
    BUILTIN    shift, and go to state 49
    NOT        shift, and go to state 50
    PLUS       shift, and go to state 51
    MINUS      shift, and go to state 52
    LPAREN     shift, and go to state 53
    INCREMENT  shift, and go to state 54
    DECREMENT  shift, and go to state 55

    exp      go to state 134
    preinc   go to state 57
    postinc  go to state 58
    predec   go to state 59
    postdec  go to state 60


State 73

    3 stmtlist: stmtlist • stmt
    4         | stmtlist • error
   29 block: LETFCURLYBRACKET stmtlist • RIGHTCURLYBRACKET

    error              shift, and go to state 4
    SEMICOLON          shift, and go to state 5
    COMMENT            shift, and go to state 6
    PRINT              shift, and go to state 7
    READ               shift, and go to state 8
    READ_STRING        shift, and go to state 9
    IF                 shift, and go to state 10
    WHILE              shift, and go to state 11
    THEN               shift, and go to state 12
    REPEAT             shift, and go to state 13
    FOR                shift, and go to state 14
    CASES              shift, and go to state 15
    DO                 shift, and go to state 16
    CLEAR              shift, and go to state 17
    PLACE              shift, and go to state 18
    LETFCURLYBRACKET   shift, and go to state 19
    RIGHTCURLYBRACKET  shift, and go to state 135
    VARIABLE           shift, and go to state 20
    CONSTANT           shift, and go to state 21
    INCREMENT          shift, and go to state 22
    DECREMENT          shift, and go to state 23

    stmt         go to state 24
    preincstmt   go to state 25
    postincstmt  go to state 26
    predecstmt   go to state 27
    postdecstmt  go to state 28
    block        go to state 29
    errorstmt    go to state 30
    errorif      go to state 31
    errorifelse  go to state 32
    if           go to state 33
    dowhile      go to state 34
    while        go to state 35
    repeat       go to state 36
    for          go to state 37
    cases        go to state 38
    clear        go to state 39
    place        go to state 40
    asgn         go to state 41
    print        go to state 42
    read         go to state 43
    readstring   go to state 44


State 74

   51 asgn: VARIABLE ASSIGNMENT • exp
   66     | VARIABLE ASSIGNMENT • asgn
   69     | VARIABLE ASSIGNMENT • alternative

    STRING     shift, and go to state 45
    NUMBER     shift, and go to state 46
    VARIABLE   shift, and go to state 136
    CONSTANT   shift, and go to state 137
    BUILTIN    shift, and go to state 49
    NOT        shift, and go to state 50
    PLUS       shift, and go to state 51
    MINUS      shift, and go to state 52
    LPAREN     shift, and go to state 138
    INCREMENT  shift, and go to state 54
    DECREMENT  shift, and go to state 55

    cond         go to state 139
    asgn         go to state 140
    alternative  go to state 141
    exp          go to state 142
    preinc       go to state 57
    postinc      go to state 58
    predec       go to state 59
    postdec      go to state 60


State 75

   52 asgn: VARIABLE PLUS_ASSIGNMENT • exp
   53     | VARIABLE PLUS_ASSIGNMENT • asgn

    STRING     shift, and go to state 45
    NUMBER     shift, and go to state 46
    VARIABLE   shift, and go to state 136
    CONSTANT   shift, and go to state 137
    BUILTIN    shift, and go to state 49
    NOT        shift, and go to state 50
    PLUS       shift, and go to state 51
    MINUS      shift, and go to state 52
    LPAREN     shift, and go to state 53
    INCREMENT  shift, and go to state 54
    DECREMENT  shift, and go to state 55

    asgn     go to state 143
    exp      go to state 144
    preinc   go to state 57
    postinc  go to state 58
    predec   go to state 59
    postdec  go to state 60


State 76

   54 asgn: VARIABLE MINUS_ASSIGNMENT • exp
   55     | VARIABLE MINUS_ASSIGNMENT • asgn

    STRING     shift, and go to state 45
    NUMBER     shift, and go to state 46
    VARIABLE   shift, and go to state 136
    CONSTANT   shift, and go to state 137
    BUILTIN    shift, and go to state 49
    NOT        shift, and go to state 50
    PLUS       shift, and go to state 51
    MINUS      shift, and go to state 52
    LPAREN     shift, and go to state 53
    INCREMENT  shift, and go to state 54
    DECREMENT  shift, and go to state 55

    asgn     go to state 145
    exp      go to state 146
    preinc   go to state 57
    postinc  go to state 58
    predec   go to state 59
    postdec  go to state 60


State 77

   56 asgn: VARIABLE MULTIPLICATION_ASSIGNMENT • exp
   57     | VARIABLE MULTIPLICATION_ASSIGNMENT • asgn

    STRING     shift, and go to state 45
    NUMBER     shift, and go to state 46
    VARIABLE   shift, and go to state 136
    CONSTANT   shift, and go to state 137
    BUILTIN    shift, and go to state 49
    NOT        shift, and go to state 50
    PLUS       shift, and go to state 51
    MINUS      shift, and go to state 52
    LPAREN     shift, and go to state 53
    INCREMENT  shift, and go to state 54
    DECREMENT  shift, and go to state 55

    asgn     go to state 147
    exp      go to state 148
    preinc   go to state 57
    postinc  go to state 58
    predec   go to state 59
    postdec  go to state 60


State 78

   58 asgn: VARIABLE DIVISION_ASSIGNMENT • exp
   59     | VARIABLE DIVISION_ASSIGNMENT • asgn

    STRING     shift, and go to state 45
    NUMBER     shift, and go to state 46
    VARIABLE   shift, and go to state 136
    CONSTANT   shift, and go to state 137
    BUILTIN    shift, and go to state 49
    NOT        shift, and go to state 50
    PLUS       shift, and go to state 51
    MINUS      shift, and go to state 52
    LPAREN     shift, and go to state 53
    INCREMENT  shift, and go to state 54
    DECREMENT  shift, and go to state 55

    asgn     go to state 149
    exp      go to state 150
    preinc   go to state 57
    postinc  go to state 58
    predec   go to state 59
    postdec  go to state 60


State 79

   60 asgn: VARIABLE INT_DIVISION_ASSIGNMENT • exp
   61     | VARIABLE INT_DIVISION_ASSIGNMENT • asgn
